# tetris_in_pure_C

./: .gitignore  CMakeLists.txt  README.md
src/: game.h  logic.c  logic.h  main.c  rendering.c  rendering.h  tetromino.c  tetromino.h
